src/test/ui/error-codes/E0433.stderr
error[E0425]: cannot find function `new` in `HashMap`
  --> $DIR/E0433.rs:2:24
   |
LL |     let map = HashMap::new();
   |                        ^^^ not found in `HashMap`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
